Add flags in Test so we can do Unsafe